<resources>
    <string name="app_name">Smart Fridge</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="sing_in">Sing In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="change_password">Change Password</string>
    <string name="password_again">Password Again</string>
    <string name="product_name">Product name</string>
    <string name="count">Count</string>
    <string name="shelf_life">Shelf life</string>
    <string name="buy_time">Buy Time</string>
    <string name="code">Code</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_new_product">Add new Product</string>
    <string name="list_of_product">List of Product</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password_length_more_6">Password (length more 4)</string>
    <string name="password_again_length_more_6">Password again(length more 4)</string>
    <string name="symbols_for_password">Password must contain at least one character from the group\nGroup: a-z AND A-Z AND 0-9 AND @#$%^+\'=!:;(){}\"
    </string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
