<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundCard"
        tools:context=".ProductActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@color/backgroundCardElement"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="@+id/toolbar"/>

    <EditText
            android:id="@+id/productName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="16dp"

            android:textSize="30sp"
            android:hint="@string/product_name"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="@color/textCard"
            android:background="@color/backgroundCardElement"/>
    <EditText
            android:id="@+id/productCount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/productName"
            app:layout_constraintStart_toEndOf="@+id/productName"
            app:layout_constraintBottom_toBottomOf="@+id/productName"
            android:layout_marginStart="8dp"

            android:textSize="30sp"
            android:hint="@string/count"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="@color/textCard"
            android:background="@color/backgroundCardElement"/>

    <EditText
            android:id="@+id/buyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productName"
            app:layout_constraintStart_toStartOf="@+id/productName"
            android:layout_marginTop="8dp"


            android:textSize="30sp"
            android:hint="@string/buy_time"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="@color/textCard"
            android:background="@color/backgroundCardElement"/>
    <EditText
            android:id="@+id/shelf_life"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buyTime"
            app:layout_constraintStart_toStartOf="@+id/buyTime"
            android:layout_marginTop="8dp"

            android:textSize="30sp"
            android:hint="@string/shelf_life"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="@color/textCard"
            android:background="@color/backgroundCardElement"/>
    <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/shelf_life"
            app:layout_constraintStart_toStartOf="@+id/shelf_life"
            android:layout_marginTop="8dp"

            android:textSize="30sp"
            android:hint="@string/code"
            android:padding="1dp"
            android:singleLine="true"
            android:textColor="@color/textCard"
            android:background="@color/backgroundCardElement"/>

</android.support.constraint.ConstraintLayout>